<resources>
    <string name="app_name">DeskBooking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="department_array">
        <item>CodingSchool</item>
        <item>Diamir</item>
        <item>WebundSoehne</item>
        <item>DarwinsLab</item>
        <item>DeepDive</item>
        <item>TailoredApps</item>
    </string-array>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_fill_all_fields">Please fill in all fields!</string>
    <string name="login_failure">Invalid email or password</string>

    <string name="columns">Columns: %1$d</string>
    <string name="rows">Rows: %1$d</string>
    <string name="id">ID: %s</string>
    <string name="map">Map: %s</string>
    <string name="logout">Logout</string>
    <string name="btnCreateRoomAndTable">Create office and desk</string>
    <string name="tvAdminHeader">Administration section</string>
    <string name="room_name">Name of the office</string>
    <string name="room_columns">Columns</string>
    <string name="room_rows">Rows</string>
    <string name="please_fill_out_all_fields_correctly">Please fill out all fields correctly.</string>
    <string name="admin_create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_office">Create new office</string>
    <string name="fixdesk_requests">FixDesk-Requests</string>
    <string name="all_comments">Comments</string>
    <string name="header_fix_desk_requests">FixDesk-Requests</string>
    <string name="header_comments">Comments</string>
    <string name="create_new_desk">Create new Desk</string>
    <string name="label_creating_desk">Name of the desk</string>
    <string name="equipment">Equipment:</string>
    <string name="hdmi" translatable="false">HDMI</string>
    <string name="usb_c" translatable="false">USB C</string>
    <string name="height_adjustable" translatable="false">Height Adjustable</string>
    <string name="laptop_dock" translatable="false">Laptop Dock</string>
    <string name="monitor" translatable="false">Monitor</string>
    <string name="monitor_2" translatable="false">Monitor 2</string>
    <string name="show_equipments">Show Equipments</string>
    <string name="deskbookingdatabase" translatable="false">DeskBookingDatabase</string>
    <string name="error_retrieving_favorites">Error retrieving favorites: %1$s</string>
    <string name="error_retrieving_user_profile">Error retrieving user profile.</string>
    <string name="api_call_failed_with_response">API call failed with response: %1$s</string>
    <string name="api_call_failed_with_response_create_desk">API call failed with response: %1$s</string>
    <string name="error_deleting_favorite_http">Error deleting favorite: HTTP %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_retrieving_profile">Error retrieving profile.</string>
    <string name="error_updating_user">Error updating user: %1$s</string>
    <string name="error">Error: %1$s</string>
    <string name="office_successfully_created">Office successfully created: %1$s</string>
    <string name="error_creating_new_office">Error creating new office: %1$s</string>
    <string name="desk_successfully_created">Desk successfully created: %1$s</string>
    <string name="error_creating_new_desk">Error creating new desk: %1$s</string>
    <string name="error_update_result">Error: %1$s</string>
    <string name="request_successfully_approved">Request successfully approved.</string>
    <string name="request_successfully_declined">Request successfully declined.</string>
    <string name="equipments">Equipments</string>
    <string name="reservation_was_successful">Reservation was successful.</string>
    <string name="unknown_error_create_booking">Unknown Error</string>
    <string name="no_access">You do not have access rights to this site.</string>
    <string name="error_fetching_favourites">Error fetching favourites: %1$s</string>
    <string name="error_deleting_favourite">Error deleting favourite: %1$s</string>
    <string name="unknown_error_login">Unknown error</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="error_updating_user_data">Error updating user data: %1$s</string>
    <string name="user_data_updated_successfully">User data updated successfully.</string>
    <string name="unknown_error_register">Unknown error.</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="inputa_data_invalid">Input data invalid. Please check your details and try again.</string>
    <string name="a_user_with_this_email_already_exists">A user with this email already exists.</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="date_end">Date End</string>
    <string name="date_start">Date Start</string>
    <string name="office_name">Office Name</string>
    <string name="desk_label">Desk Label</string>
    <string name="desk_label_favourites">Desk Label</string>
    <string name="office_name_favourites">Office Name</string>
    <string name="quick_reserve">Quick Reserve</string>
    <string name="fix_flex_desk">Fix/Flex Desk</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reserve">Reserve</string>
    <string name="office_name_desks">Office Name</string>
    <string name="desk_label_desks">Desk Label</string>
    <string name="office_name_offices">Office Name</string>
    <string name="accept">Accept</string>
    <string name="desk_label_admin">Desk Label</string>
    <string name="user_name">User Name</string>
    <string name="kommentar">Kommentar</string>
    <string name="user">User</string>
    <string name="we_are_excited_to_see_you_here">We are excited to see you here!</string>
    <string name="almost_there">Almost There !</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_nav">Sign Up</string>
    <string name="email_profile">Email</string>
    <string name="password_profile">Password</string>
    <string name="last_name_profile">Last Name</string>
    <string name="first_name_profile">First Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="choose_an_office">Choose an office</string>
    <string name="desk_booking_system">Desk Booking System</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="email_address">Email Address</string>
    <string name="password_login">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an Account yet? SIGN UP!</string>
    <string name="input_data_invalid">input data invalid</string>
    <string name="favourite_desks">Favourite Desks</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="administration">Administration</string>
    <string name="your_reservations">Your Reservations</string>
    <string name="booking_plan_desks">Booking Plan - Desks</string>
    <string name="booking_plan_offices">Booking Plan - Offices</string>
    <string name="login_nav">Login</string>
</resources>