<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <EditText
        android:id="@+id/etOfficeName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/room_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="officeName" />

    <EditText
        android:id="@+id/etRoomColumns"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/room_columns"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOfficeName"
        android:layout_marginTop="16dp"
        android:autofillHints="roomColumn" />

    <EditText
        android:id="@+id/etRoomRows"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/room_rows"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRoomColumns"
        android:layout_marginTop="16dp"
        android:autofillHints="roomRow" />

</androidx.constraintlayout.widget.ConstraintLayout>
