<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp">

            <TextView
                android:id="@+id/tvAlmostThere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/almost_there"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvExcited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_excited_to_see_you_here"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlmostThere" />

            <EditText
                android:id="@+id/etRegisterName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:alpha="0.7"
                android:drawableStart="@drawable/person_icon"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvExcited" />

            <EditText
                android:id="@+id/etRegisterLastName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:drawableStart="@drawable/person_icon"
                android:hint="@string/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRegisterName" />

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRegisterLastName" />

            <Spinner
                android:id="@+id/spinnerRegisterDepartment"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:drawableStart="@drawable/password_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRegisterDepartment" />

            <EditText
                android:id="@+id/etRegisterConfirm"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:drawableStart="@drawable/password_icon"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/sign_up"
                app:cornerRadius="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRegisterConfirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
